<resources>
    <string name="app_name" translatable="false">uicomponent</string>

    <!-- Session -->
    <string name="session_label">Session</string>
    <!-- Speaker -->
    <string name="speaker_label" translatable="false">Speaker</string>
    <!-- Announce -->
    <string name="announce_label">Announce</string>
    <!-- About -->
    <string name="about_label">About</string>
    <!-- Sponsor -->
    <string name="sponsor_label">Sponsor</string>
    <!-- FloorMap -->
    <string name="map_label">Floormap</string>
    <!-- Survey -->
    <string name="survey_label">Entire survey</string>
    <string name="ellipsis_label">more</string>
    <string name="session_survey_label">Session survey</string>
    <!-- Search -->
    <string name="search_label" translatable="false">Search</string>
    <!-- Contributor -->
    <string name="contributor" translatable="false">Contributor</string>
    <!-- Setting -->
    <string name="setting_label" translatable="false">Setting</string>
    <!-- Staff Search -->
    <string name="staff_search_label">Committee Members</string>
    <!-- Widgets -->
    <string name="description_filter_applied">%1$s filter applied</string>
    <string name="description_filter_not_applied">%1$s filter not applied</string>
    <!-- Notification -->
    <string name="notification_title_session_start">Notice of favorite session start</string>
    <string name="notification_message_session_title">%1$s will start soon</string>
    <string name="notification_message_session_start_time">%1$s to %2$s @ %3$s</string>
    <!-- Tabular Form -->
    <string name="tabular_form_label">Timetable</string>

    <string name="speaker_image_transition" translatable="false">speaker_image</string>
</resources>
