<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/main"
    >
    <fragment
        android:id="@+id/main"
        android:name="io.github.droidkaigi.confsched2019.session.ui.SessionPagesFragment"
        android:label="@string/session_label"
        >
        <action
            android:id="@id/action_session_to_session_detail"
            app:destination="@id/session_detail"
            />
    </fragment>
    <fragment
        android:id="@+id/sessions"
        android:name="io.github.droidkaigi.confsched2019.session.ui.SessionPageFragment"
        android:label="@string/session_label"
        >
        <argument
            android:name="tabIndex"
            app:argType="integer"
            />
    </fragment>
    <fragment
        android:id="@+id/bottom_session_day"
        android:name="io.github.droidkaigi.confsched2019.session.ui.BottomSheetDaySessionsFragment"
        android:label="@string/session_label"
        >
        <argument
            android:name="day"
            app:argType="integer"
            />
    </fragment>
    <fragment
        android:id="@+id/session_favorite"
        android:name="io.github.droidkaigi.confsched2019.session.ui.BottomSheetFavoriteSessionsFragment"
        android:label="@string/session_label"
        />

    <fragment
        android:id="@id/session_detail"
        android:name="io.github.droidkaigi.confsched2019.session.ui.SessionDetailFragment"
        android:label="@string/session_label"
        >
        <argument
            android:name="session"
            app:argType="string"
            />
        <action
            android:id="@id/action_session_detail_to_speaker"
            app:destination="@id/speaker"
            />
    </fragment>
    <fragment
        android:id="@+id/speaker"
        android:name="io.github.droidkaigi.confsched2019.session.ui.SpeakerFragment"
        android:label="@string/speaker_label"
        >
        <argument
            android:name="speaker"
            app:argType="string"
            />
    </fragment>
    <fragment
        android:id="@+id/about"
        android:name="io.github.droidkaigi.confsched2019.about.ui.AboutFragment"
        android:label="@string/about_label"
        >
    </fragment>
    <fragment
        android:id="@+id/announce"
        android:name="io.github.droidkaigi.confsched2019.announcement.ui.AnnouncementFragment"
        android:label="@string/announce_label"
        >
    </fragment>
    <fragment
        android:id="@+id/sponsor"
        android:name="io.github.droidkaigi.confsched2019.sponsor.ui.SponsorFragment"
        android:label="@string/sponsor_label"
        >
    </fragment>
    <fragment
        android:id="@+id/floormap"
        android:name="io.github.droidkaigi.confsched2019.floormap.ui.FloorMapFragment"
        android:label="@string/map_label"
        >
    </fragment>
</navigation>
