<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/session"
    >

    <fragment
        android:id="@id/session"
        android:name="io.github.droidkaigi.confsched2019.ui.MainFragment"
        android:label="@string/session_label"
        tools:layout="@layout/fragment_main"
        >
        <action
            android:id="@id/action_session_to_session_detail"
            app:destination="@id/session_detail"
            />
    </fragment>
    <fragment
        android:id="@id/session_detail"
        android:name="io.github.droidkaigi.confsched2019.session.ui.SessionDetailFragment"
        android:label="@string/session_label"
        tools:layout="@layout/fragment_all_sessions"
        >
        <argument
            android:name="session"
            app:argType="string"
            />
    </fragment>
    <fragment
        android:id="@+id/announce"
        android:name="io.github.droidkaigi.confsched2019.announcement.ui.AnnouncementFragment"
        android:label="@string/announce_label"
        tools:layout="@layout/fragment_all_sessions"
        >
    </fragment>
    <fragment
        android:id="@+id/map"
        android:name="io.github.droidkaigi.confsched2019.ui.MainFragment"
        android:label="@string/map_label"
        tools:layout="@layout/fragment_all_sessions"
        >
    </fragment>
    <fragment
        android:id="@+id/other"
        android:name="io.github.droidkaigi.confsched2019.ui.MainFragment"
        android:label="@string/other_label"
        tools:layout="@layout/fragment_all_sessions"
        >
    </fragment>
</navigation>
